# runlib

./: .gitignore  .gitmodules  README.md  SPECIFICATION.md  compile-runexe.bat  go.mod  go.sum
.claude/: plan.md  settings.local.json
.github/workflows/: go.yml  rust.yml
contester_proto/: Blobs.pb.go  Blobs.proto  Blobs_protoopaque.pb.go  Contester.pb.go  Contester.proto  Contester_protoopaque.pb.go  Execution.pb.go  Execution.proto  Execution_protoopaque.pb.go  Local.pb.go  Local.proto  Local_protoopaque.pb.go  proto_helpers.go
cpuhog/: cpuhog.go
examples/interactive-big-io/: .gitignore  compile.bat  interactor.cpp  run.bat  solution.cpp  testlib.h
intersink/: main.go
intwrapper/: intwrapper.go
linux/: cgroup.go  cgroup_test.go  clone_helper.cc  clone_helper.h  clone_other.go  cloneopt.go  linux_syscall_support.h  mysyscalls.h
mongotools/: gridfs.go
palevo/: palevo.go
platform/: desktops_windows.go  desktops_windows_386.go  desktops_windows_amd64.go  global_linux.go  utils.go
platform/detector_source/: Detect32BitEntryPoint.c  compile.cmd
platform/linux/: cloneopt.go
platform/win32/: win32.go  win32_acl.go
problemimporter/: cleanup.go  importer.go
rpc4/: codec.go  rpcfour.pb.go  rpcfour.proto
runexe/: runexe.go  runexe_flags.go  runexe_linux.go  runexe_results.go  runexe_windows.go  runexe_windows_386.go
runner/: runner.go
runnerd/: runnerd.go
rust/: Cargo.toml  build.bat
rust/bins/runexe/: Cargo.toml
rust/bins/runexe/src/: flags.rs  main.rs  results.rs
rust/bins/runner/: Cargo.toml
rust/bins/runner/src/: main.rs
rust/crates/contester-proto/: Cargo.toml  build.rs
rust/crates/contester-proto/src/: lib.rs
rust/crates/rpc4/: Cargo.toml
rust/crates/rpc4/src/: lib.rs
rust/crates/service/: Cargo.toml
rust/crates/service/src/: lib.rs  sandbox.rs
rust/crates/storage/: Cargo.toml
rust/crates/storage/src/: lib.rs
rust/crates/subprocess/: Cargo.toml
rust/crates/subprocess/src/: detect32bit.exe.embed  interconnect.rs  lib.rs  platform_linux.rs  platform_windows.rs  redirects.rs
rust/crates/tools/: Cargo.toml
rust/crates/tools/src/: lib.rs
rust/proto/: Blobs.proto  Contester.proto  Execution.proto  Local.proto
service/: clear.go  desktops_windows.go  errors.go  exec.go  exec_linux.go  exec_windows.go  exec_windows_386.go  fileops.go  fileops_windows.go  gridfs.go  platform_windows.go  putget.go  sandbox.go  sandbox_linux.go  sandbox_windows.go  sandbox_windows_386.go  service.go  service_linux.go  service_windows.go  service_windows_386.go  setup_windows.go  setup_windows_386.go
storage/: manifest.pb.go  manifest.proto  mongodb.go  problem.go  storage.go  weedfiler.go
sub32/: subprocess.go  win32.go
subprocess/: errors.go  misc_win32.go  misc_windows.go  misc_windows_386.go  redirects.go  redirects_linux.go  redirects_win32.go  redirects_windows.go  redirects_windows_386.go  subprocess.go  subprocess_linux.go  subprocess_win32.go  subprocess_windows.go  subprocess_windows_386.go  subprocess_windows_amd64.go
tools/: errors.go  errors_test.go  hash.go  logmem.go  stat.go  util_linux.go  utils.go
win32/: netapi_windows.go  win32.go  win32_acl.go  win32_windows.go  win32_windows_386.go  win32_windows_amd64.go  win32acl_windows.go  win32acl_windows_386.go
