[workspace]
resolver = "2"
members = [
    "crates/contester-proto",
    "crates/tools",
    "crates/subprocess",
    "crates/rpc4",
    "crates/service",
    "crates/storage",
    "bins/runexe",
    "bins/runner",
]

[workspace.package]
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Protobuf
prost = "0.13"
prost-build = "0.13"

# Async
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Crypto & compression
sha1 = "0.10"
flate2 = "1"

# HTTP
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }

# XML
quick-xml = { version = "0.37", features = ["serialize"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Byte manipulation
byteorder = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Internal crates
contester-proto = { path = "crates/contester-proto" }
contester-tools = { path = "crates/tools" }
contester-subprocess = { path = "crates/subprocess" }
contester-rpc4 = { path = "crates/rpc4" }
contester-service = { path = "crates/service" }
contester-storage = { path = "crates/storage" }
