[package]
name = "runner"
version = "0.1.0"
edition.workspace = true

[dependencies]
contester-service = { workspace = true }
contester-rpc4 = { workspace = true }
contester-proto = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
