[package]
name = "contester-service"
version = "0.1.0"
edition.workspace = true

[dependencies]
contester-proto = { workspace = true }
contester-tools = { workspace = true }
contester-subprocess = { workspace = true }
contester-storage = { workspace = true }
contester-rpc4 = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
prost = { workspace = true }
glob = "0.3"
hostname = "0.4"
num_cpus = "1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_NetworkManagement_NetManagement",
] }
