[package]
name = "contester-storage"
version = "0.1.0"
edition.workspace = true

[dependencies]
contester-proto = { workspace = true }
contester-tools = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
