[package]
name = "contester-subprocess"
version = "0.1.0"
edition.workspace = true

[dependencies]
contester-proto = { workspace = true }
contester-tools = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
bitflags = { workspace = true }
os_pipe = "1"
tempfile = "3"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = ">=0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_JobObjects",
    "Win32_Security",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Console",
    "Win32_System_SystemInformation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_FileSystem",
] }
